--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <h1>Intro To GIT</h1>
-        <p>Your first to step to git mastery</p>
+        <p>Your first to step to git mastery!!!!</p>
     </div>
 </body>
 </html>
